list_all_error_4.txt
C:\Users\Rhydham\Desktop\projects\ys-final\v3\web-app\backend\node_modules\ts-node\src\index.ts:859
    return new TSError(diagnosticText, diagnosticCodes, diagnostics);
           ^
TSError: ⨯ Unable to compile TypeScript:
src/scripts/list_all_tutor_payouts.ts(5,1): error TS6133: 'User' is declared but its value is never read.
src/scripts/list_all_tutor_payouts.ts(6,1): error TS6133: 'ClassLead' is declared but its value is never read.
src/scripts/list_all_tutor_payouts.ts(7,1): error TS6133: 'FinalClass' is declared but its value is never read.
src/scripts/list_all_tutor_payouts.ts(8,1): error TS6133: 'GroupClass' is declared but its value is never read.
src/scripts/list_all_tutor_payouts.ts(9,1): error TS6133: 'AttendanceSheet' is declared but its value is never read.

    at createTSError (C:\Users\Rhydham\Desktop\projects\ys-final\v3\web-app\backend\node_modules\ts-node\src\index.ts:859:12)
    at reportTSError (C:\Users\Rhydham\Desktop\projects\ys-final\v3\web-app\backend\node_modules\ts-node\src\index.ts:863:19)
    at getOutput (C:\Users\Rhydham\Desktop\projects\ys-final\v3\web-app\backend\node_modules\ts-node\src\index.ts:1077:36)
    at Object.compile (C:\Users\Rhydham\Desktop\projects\ys-final\v3\web-app\backend\node_modules\ts-node\src\index.ts:1433:41)
    at Module.m._compile (C:\Users\Rhydham\Desktop\projects\ys-final\v3\web-app\backend\node_modules\ts-node\src\index.ts:1617:30)
    at Module._extensions..js (node:internal/modules/cjs/loader:1623:10)
    at Object.require.extensions.<computed> [as .ts] (C:\Users\Rhydham\Desktop\projects\ys-final\v3\web-app\backend\node_modules\ts-node\src\index.ts:1621:12)
    at Module.load (node:internal/modules/cjs/loader:1266:32)
    at Function.Module._load (node:internal/modules/cjs/loader:1091:12)
    at Function.executeUserEntryPoint [as runMain] (node:internal/modules/run_main:164:12) {
  diagnosticCodes: [ 6133, 6133, 6133, 6133, 6133 ]
}
